Source/WebCore/platform/network/ResourceHandle.h
@@ -259,7 +259,7 @@ private:
     };
 
     void addCacheValidationHeaders(ResourceRequest&);
-    Ref<CurlRequest> createCurlRequest(ResourceRequest&, RequestStatus = RequestStatus::NewRequest);
+    Ref<CurlRequest> createCurlRequest(ResourceRequest&&, RequestStatus = RequestStatus::NewRequest);
 
     bool shouldRedirectAsGET(const ResourceRequest&, bool crossOrigin);
 
